fix: new color scheme and alignment

--- a/CalorieCounter/assets/css/styles.css
+++ b/CalorieCounter/assets/css/styles.css
@@ -12,8 +12,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-
   color: black;
 }
 
@@ -22,12 +20,21 @@ main {
   gap: 20px;
 }
 
+.calorie-inputs {
+  margin: 30px 0;
+}
+
 .calorie-inputs,
 .output {
   background-color: #f8f3e9;
   width: 500px;
   padding: 20px 40px;
   border-radius: 20px;
+}
+
+.output {
+  height: 200px;
+  align-self: center;
 }
 
 .hide {
@@ -60,34 +67,46 @@ main {
 }
 
 #budget {
-  padding: 3px 5px;
   margin-bottom: 10px;
   background-color: #f8f3e9;
-  border: 1.5px solid #d3af77;
+  border: 1px solid #908b82;
+}
+
+input {
+  background-color: #f8f3e9;
+  border: 1px solid #908b82;
   border-radius: 7px;
-  color: black;
+  padding: 8px;
+  border-radius: 7px;
 }
 
 .controls {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 30px 0 10px 0;
+}
+
+#add-entry,
+#calculate {
+  border: none;
+  background-color: #d3af77;
+  color: black;
+  border-radius: 10px;
+  padding: 10px 0;
 }
 
 #calculate {
-  padding: 10px 10px;
   width: 70%;
 }
 
 #add-entry {
-  padding: 10px 30px;
+  width: 28%;
 }
 
 #clear {
   background-color: black;
+  border: none;
   color: white;
-  padding: 10px 25px;
-  border-radius: 7px;
-  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
   width: 28%;
 }
 
@@ -95,15 +114,17 @@ main {
   background-color: #efe9dc;
   border: none;
   border-radius: 10px;
-  padding: 10px 30px;
+  padding: 10px;
+  width: 33%;
   color: black;
 }
 
 fieldset {
   background-color: #efe9dc;
-  border-radius: 6px;
+  border-radius: 10px;
   border: none;
   margin-bottom: 12px;
+  padding: 15px 10px;
 }
 
 /* Fonts */
@@ -118,12 +139,4 @@ legend {
 
 label {
   color: black;
-}
-
-#add-entry,
-#calculate {
-  border: none;
-  background-color: #d3af77;
-  color: black;
-  border-radius: 10px;
 }
